# noter

./: .clang-format  .gitignore  .vimspector.json  CMakeLists.txt  Doxyfile.in  Editor.cpp  Editor.h  Highlighter.cpp  Highlighter.h  NotebookDialog.cpp  NotebookDialog.h  NotebookListComboBox.cpp  NotebookListComboBox.h  NotebookTreeWidget.cpp  NotebookTreeWidget.h  NoterConfig.cpp  NoterConfig.h  README.md  SearchPanel.cpp  SearchPanel.h  StatusBarWidgets.cpp  StatusBarWidgets.h  SubstitutePanel.cpp  SubstitutePanel.h  TODO.md  log.h  log.txt  main.cpp  mainwindow.cpp  mainwindow.h
resources/: resources.qrc  zh_CN.qm
